--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "caeser-cipher-cli"
+name = "sql"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3.17", features = ["derive"] }
+
+rusqlite = "0.29.0"
+
+[lib]
+name = "DBFunc"
+path = "lib.rs"
